# architex-agents-web

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  debug_db.py  docker-compose.yml  fix_schema.py  login_preview.html  package-lock.json  package.json  pyproject.toml  requirements.txt  reset_db.py  test_flows.py
client/: package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/dashboard/: DashboardLayout.tsx
client/src/components/ui/: button-variants.ts  button.tsx  card.tsx  input.tsx
client/src/lib/: api.ts  auth.ts  navigation.ts
client/src/pages/: LandingPage.tsx  LoginPage.tsx  OnboardingPage.tsx
client/src/pages/dashboard/: DashboardRouter.tsx
client/src/pages/dashboard/admin/: AdminDashboard.tsx  AdminOverviewPage.tsx  AdminProjectsPage.tsx  AdminTasksPage.tsx  AdminUsersPage.tsx
client/src/pages/dashboard/client/: ClientDashboard.tsx  ClientDocumentsPage.tsx  ClientOverviewPage.tsx  ClientProjectsPage.tsx
client/src/pages/dashboard/freelancer/: FreelancerDashboard.tsx  FreelancerOverviewPage.tsx  FreelancerProfilePage.tsx  FreelancerTasksPage.tsx
docker/nginx/: nginx.conf
docs/: deployment.md  development.md  prd.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.js
frontend/src/components/: ChatBubble.tsx  Layout.tsx  Modal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: _app.tsx  admin.tsx  dashboard.tsx  freelancer.tsx  index.tsx  login.tsx  register.tsx  start.tsx
frontend/src/pages/projects/: [id].tsx
frontend/src/styles/: globals.css
scripts/: deploy.sh  setup.sh
server/: .env.example  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts
server/src/lib/: db.ts
server/src/middleware/: auth.ts
server/src/routes/: admin.ts  auth.ts  freelancer.ts  projects.ts
src/: __init__.py
src/agents/: __init__.py  area_agent.py  base_agent.py  compliance_formatter_agent.py  council_agent.py  dimension_agent.py  energy_agent.py  enhanced_base_agent.py  wall_agent.py  window_door_agent.py
src/ai/: __init__.py  openrouter_client.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  agents.py  auth.py  compliance.py  freelancers.py  notifications.py  payments.py  projects.py  time_tracking.py  users.py
src/db/: connection.py  schema.py
src/orchestrator/: __init__.py  base.py  orchestrator.py  registry.py
src/utils/: __init__.py  file_utils.py  validation.py
tests/: test_agents.py
